--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,13 @@
 @import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap");
+
+body {
+  font-family: "Mulish", sans-serif;
+}
+
+* {
+  font-family: "Mulish", sans-serif;
+}
 @theme {
   --color-blue: #4097ff;
   --color-blue-tranparent: rgba(64, 151, 255, 0.5);
